# AirQualityPredictor

./: .env.example  .gitignore  .replit  DEPLOYMENT_GUIDE.md  README_DEPLOYMENT.md  api.py  api_requirements.txt  app.py  pyproject.toml  replit.md
.streamlit/: secrets.toml.example
