[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "supabase>=2.23.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
